# BharatPro_AutoML

./: .gitignore  LICENSE  README.md  requirements.txt
backend/: .env.example  auth.py  automl_local.db  database.py  main.py  mcp_data.py  mcp_eda.py  mcp_explain.py  mcp_export.py  mcp_modeling.py  mcp_server.py  pyproject.toml  requirements.txt
backend/_legacy/: code_generator.py  data_analysis.py  model_bakeoff.py
backend/core/: config.py  logger.py  mcp_pool.py  orchestrator.py  paths.py  storage.py  supabase_client.py
backend/schemas/: chat.py  conversation.py
backend/tools/: data_profiling.py  eda.py  explainability.py  ml_training.py  visualization.py
frontend/: next.config.mjs  package-lock.json  package.json  tailwind.config.ts  tsconfig.tsbuildinfo
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/auth/callback/: route.ts
frontend/app/login/: page.tsx
frontend/components/: ArtifactViewer.tsx  ChatComposer.tsx  ChatInterface.tsx  ConversationSidebar.tsx  DatasetSidebar.tsx  EmptyState.tsx  FileUploader.tsx  HelpDialog.tsx  MessageBubble.tsx  PromptCommandMenu.tsx  ServiceStatusPanel.tsx  SignedImage.tsx  ToolCallCard.tsx  ToolProgressBanner.tsx
frontend/hooks/: useServiceNetwork.ts  useStreamingChat.ts
frontend/lib/: api.ts  auth-context.tsx  streamingClient.ts  supabase.ts  toolEventMap.ts  types.ts
scripts/: start_all.sh
